--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: c4ai
 description: Connect 4
-
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
@@ -10,16 +9,18 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  faker: ^2.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
