--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,15 @@ dependencies:
   google_fonts: ^2.3.1
   shared_preferences: ^2.0.13
 
+  # Import the provider package.
+  provider: ^6.0.2
+
+  # plugin is not yet part of the flutter framework
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
